feat: add dark mode and theme toggle functionality to popup
- Introduced light and dark mode styles in popup.html with CSS variables
- Implemented theme toggle button in popup for user preference
- Updated popup.js to handle theme switching and persist user choice in local storage
- Added content script for dark mode on Codeforces pages

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,15 @@
   "content_scripts": [
     {
       "matches": [
+        "https://codeforces.com/*"
+      ],
+      "js": [
+        "features/dark-mode/content.js"
+      ],
+      "run_at": "document_start"
+    },
+    {
+      "matches": [
         "https://codeforces.com/contest/*/problem/*",
         "https://codeforces.com/problemset/problem/*/*",
         "https://codeforces.com/gym/*/problem/*"
